clang/test/BSC/Negative/Ownership/Owned/ternary/ternary.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

_Safe void consume(int *_Owned _Nullable);

_Safe void reference(_Bool flag, int *_Owned _Nullable p, int *_Owned _Nullable q) {
    if (flag) {
        consume(p);
    } else {
        consume(q);
    }
} // expected-error {{memory leak of value: `p`}} 
// expected-error@-1 {{memory leak of value: `q`}}

_Safe void branch_consume(_Bool flag, int *_Owned _Nullable p, int *_Owned _Nullable q) {
    consume(flag ? p : q);
} // expected-error {{memory leak of value: `p`}} 
// expected-error@-1 {{memory leak of value: `q`}}

_Safe void differently_treated_subexpressions(int *_Owned _Nullable p, int *_Owned _Nullable q, int *_Owned _Nullable r) {
    consume(p ? q : r);
    // p is certainly not consumed
    consume(p);
}  // expected-error {{memory leak of value: `q`}} 
// expected-error@-1 {{memory leak of value: `r`}}